remake controller tests and implement fixes